--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,17 @@ tmp/
 .vscode/
 .pytest_cache/
 **/__init__.py
+
+
+**/.terraform*
+*.tfstate
+*.tfstate.*
+terraform.tfstate.d/
+crash.log
+*.tfvars
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+.terraformrc
+terraform.rc
