--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -14,10 +14,16 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    
+    - name: Install Pipenv
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
+        pip install pipenv
+
+    - name: Install dependencies with Pipenv
+      run: |
+        pipenv install --dev  # Adjust path if needed
+    
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
