--- a/.github/workflows/lambda_build.yml
+++ b/.github/workflows/lambda_build.yml
@@ -21,9 +21,9 @@ jobs:
       with:
         python-version: '3.10'  # Set up the Python version to match your environment
 
-    - name: Install dependencies
-      run: |
-        pip install -r lambda_function/requirements.txt  # Adjust path if needed
+    # - name: Install dependencies
+    #   run: |
+    #     pip install -r lambda_function/requirements.txt  # Adjust path if needed
 
     - name: Package Lambda
       run: |
