update auto deployment yml

--- a/.github/workflows/lambda_build.yml
+++ b/.github/workflows/lambda_build.yml
@@ -27,8 +27,8 @@ jobs:
 
     - name: Package Lambda
       run: |
-        cd lambda_function
-        zip -r ./demos/terraform_demo/lambda_function/lambda_function.zip lambda_function.py  # Adjust paths if needed
+        cd ./demos/terraform_demo/lambda_function/
+        zip -r lambda_function.zip lambda_function.py  # Adjust paths if needed
 
     - name: Deploy using Terraform
       run: |
