update files on Jun 6

--- a/Pipfile
+++ b/Pipfile
@@ -33,6 +33,9 @@ matplotlib = "*"
 python-louvain = "*"
 streamlit = "*"
 ipysigma = "*"
+igraph = "*"
+pelote = "*"
+seaborn = "*"
 
 [dev-packages]
 
